<resources>
    <string name="app_name">Tungguin</string>
    <string name="logo_full">logo_full</string>
    <string name="tungguin">Tungguin</string>
    <string name="privacy_policy">Dengan masuk dan mendaftar, kamu penyetujui Ketentuan Layanan dan Kebijakan Privasi.</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="kota">Kota</string>
    <string name="provinsi">Provinsi</string>
    <string name="retype_password">Retype Password</string>
    <string name="password">Password</string>
    <string name="email">Alamat Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nomor_whatsapp">Nomor WhatsApp</string>
    <string name="logoemail">logoEmail</string>
    <string name="logopass">logoPass</string>
    <string name="cari_desain">Cari desain</string>
    <string name="gambar">gambar</string>
    <string name="welcome">Selamat datang…</string>
    <string name="intro">Mau desain apa sekarang?</string>
    <string name="tungguin_pay">Tungguin Pay</string>
    <string name="saldo">Rp. ........</string>
    <string name="top_up">Top Up</string>
    <string name="reward">Reward</string>
    <string name="profil">Profil</string>
    <string name="menu1">Order</string>
    <string name="menu2">Chat</string>
    <string name="menu3">Reward</string>
    <string name="menu4">Promo Desain</string>
    <string name="menu5">Histori Order</string>
    <string name="menu6">Garansi</string>
    <string name="menu7">Help</string>
    <string name="point">......</string>
    <string name="inputNama">Masukan Nama</string>
    <string name="inputEmail">Email</string>
    <string name="inputNomor">Masukan Nomor Telepon</string>
    <string name="logout">Logout</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="ubah_password">Ubah password</string>
    <string name="ubah_pass">Ubah Password</string>
    <string name="close">Close</string>
    <string name="newPassText">MASUKAN PASSWORD BARU</string>
    <string name="password_baru">Password baru</string>
    <string name="password_sekarang">Password sekarang</string>
    <string name="confPass">Masukan sekali lagi</string>
    <string name="simpan">Simpan</string>
    <string name="history">Histori</string>
    <string name="kirim">Kirim</string>
    <string name="email2">Masukan Alamat Email</string>
    <string name="enter_amount">ENTER AMOUNT</string>
    <string name="zero">0</string>
    <string name="_25_000">25.000</string>
    <string name="_50_000">50.000</string>
    <string name="_75_000">75.000</string>
    <string name="_100_000">100.000</string>
    <string name="_200_000">200.000</string>
    <string name="_300_000">300.000</string>
    <string name="_500_000">500.000</string>
    <string name="_750_000">750.000</string>
    <string name="_1_000_000">1.000.000</string>
    <string name="jumlah_top_up">Jumlah Top Up</string>
    <string name="rp_0">Rp 0,-</string>
    <string name="saldo_e_wallet">Saldo e-Wallet Anda:</string>
    <string name="formatterdId">-</string>
    <string name="formattedStatus">Menunggu Pembayaran</string>
    <string name="farmatteedDate">Date:</string>
    <string name="formattedEx">Ex:</string>
    <string name="deposit">deposit</string>
    <string name="date2">-</string>
    <string name="data_not_found">Desain tidak ditemukan!</string>
    <string name="product">Spanduk Sekolah</string>
    <string name="srcDesain">Mau desain apa sekarang?</string>
    <string name="txtSrc2">Desain tidak ditemukan</string>
    <string name="txtSrc3">Tidak menemukan desain yang anda cari?</string>
    <string name="tctSrc4">Ajukan DISINI!</string>
    <string name="titleContact">Mau request apa?</string>
    <string name="content">Silakan tulis permintaan mu disini</string>
    <string name="src_design">Cari desain</string>
    <string name="wildan">Hei.....</string>
    <string name="productNameExample">-</string>
    <string name="txt_data_not_found">Tidak Ada Data</string>
    <string name="informasi_order">Informasi Order</string>
    <string name="id_order">ID Order</string>
    <string name="waktu_pemesanan">Waktu Pemesanan</string>
    <string name="expire_date">Expire Date</string>
    <string name="status">Status</string>
    <string name="name">Nama</string>
    <string name="text_designer">Designer</string>
    <string name="none">-</string>
    <string name="designer_code">Kode:</string>
    <string name="order_information">Designer akan muncul ketika pembayaran sudah selesai dilakukan.</string>
    <string name="payment_instructions">Unduh Instruksi Pembayaran</string>
    <string name="btn_chat">Chat</string>
    <string name="btn_rating">Berikan Penilaian</string>
    <string name="btn_repeat_order">Order Lagi ke Designer Ini</string>
    <string name="contact_designer">Hubungi Via WhatsApp</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="testimoni">Testimoni</string>
    <string name="testimoni_designer">Testimoni Designer:</string>
    <string name="testimoni_aplikasi">Testimoni Aplikasi:</string>
    <string name="tip">Tip:</string>
    <string name="image_ilustration">Gambar hanya contoh / ilustrasi</string>
    <string name="send_detail_order">Kirim Detail Order Sekarang</string>
    <string name="hide_detail_order">Sembunyikan Detail Order</string>
    <string name="order_detail_product">Detail Produk yang Dipesan</string>
    <string name="design_result">Hasil Desain</string>
    <string name="download_file_information">Silakan unduh filenya pada link berikut ini:</string>
    <string name="desain">Desain</string>
    <string name="konsep_desain">Konsep Desain</string>
    <string name="detail_design">Detail Desain</string>
    <string name="preferensi_desain">Preferensi Desain</string>
    <string name="harga">Harga</string>
    <string name="message_example">Message</string>
    <string name="clock">00:00:00</string>
    <string name="id_order_customer">ID Order:</string>
    <string name="total_product">Jumlah (0 produk)</string>
    <string name="service_fees">Service Fees</string>
    <string name="total">Total</string>
    <string name="input_coupon_code">Masukan Kode Kupon</string>
    <string name="check">Cek</string>
    <string name="btn_payment">Bayar</string>
    <string name="loading_progress">Sedang Memuat....</string>
    <string name="input_message">Ketik pesan</string>
    <string name="image_button">image_button</string>
    <string name="send_contact_us">Kirim Pesan</string>
    <string name="total_service_fees">(Total + Service Fees)</string>
    <string name="descriptioni">Deskripsi</string>
    <string name="message">Pesan</string>
    <string name="selamat_datang_di_tungguin">Selamat Datang di Tungguin</string>
    <string name="tagline">Butuh desan apa saja sekarang? Tungguin aja</string>
    <string name="text_designer_online">0 Desainer sedang online</string>
    <string name="design_count">Jumlah Desain</string>
    <string name="design_concept">Konsep Desain</string>
    <string name="concept_design_hint">Masukan konsep desain yang anda inginkan disini</string>
    <string name="design_reference">Referensi Desain</string>
    <string name="add_reference_file">(+) Tambah File</string>
    <string name="nol_desain">0 Desain</string>
    <string name="design_order">Order Desain</string>
    <string name="search_designer">Sedang Mencari Desainer....</string>
    <string name="search_designer_timer">30</string>

    <item name="visible" type="id"/>
    <item name="masked" type="id"/>

    <item name="path_password_eye_mask_visible" type="id"/>
    <item name="path_password_eye_mask_strike_through" type="id"/>
</resources>
