<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:cardElevation="3dp"
        app:cardCornerRadius="4dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/testimoni"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"/>

        <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="#FFDADADA"/>

        <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:numStars="5"
                android:stepSize="1"
                android:theme="@style/RatingBar" android:isIndicator="true"/>

        <TextView
                android:text="@string/testimoni_designer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>

        <TextView
                android:id="@+id/tv_testi_designer"
                android:text="@string/none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textStyle="bold|italic"/>

        <TextView
                android:text="@string/testimoni_aplikasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"/>

        <TextView
                android:id="@+id/tv_testi_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/none"
                android:textStyle="bold|italic"/>

        <TextView
                android:text="@string/tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"/>

        <TextView
                android:id="@+id/tv_tip_designer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/rp_0"
                android:textStyle="bold"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>