<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.MainActivity"
        android:background="@color/white">

    <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_size_margin"
            android:layout_marginTop="@dimen/big_size_margin"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:text="@string/privacy_policy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/privacy_policy"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/big_size_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/big_size_margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/big_size_margin"
            android:textColor="#000000"
            android:textAlignment="viewStart" android:gravity="start"/>

    <Button
            android:text="@string/masuk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:background="@drawable/btn_primary_round_hover"
            android:textColor="#FFFFFF"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/big_size_margin"
            android:layout_marginBottom="@dimen/big_size_margin"
            app:layout_constraintBottom_toTopOf="@+id/privacy_policy"
            android:layout_marginEnd="@dimen/normal_size_margin"
            app:layout_constraintEnd_toStartOf="@+id/btn_register"
            android:elevation="6dp"
            tools:targetApi="lollipop"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:textStyle="bold"/>

    <Button
            android:text="@string/daftar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register"
            android:layout_marginEnd="@dimen/big_size_margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/big_size_margin"
            app:layout_constraintBottom_toTopOf="@+id/privacy_policy"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:background="@drawable/btn_primary_round_hover"
            app:layout_constraintStart_toEndOf="@+id/btn_login"
            android:layout_marginStart="@dimen/normal_size_margin"
            android:elevation="6dp"
            tools:targetApi="lollipop"
            android:textStyle="bold"/>

    <TextView
            android:id="@+id/tv_text_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/big_size_margin"
            android:layout_marginEnd="@dimen/big_size_margin"
            android:layout_marginBottom="@dimen/big_size_margin"
            android:text="@string/tagline"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"/>

    <TextView
            android:id="@+id/tv_text_one"
            android:text="@string/selamat_datang_di_tungguin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/big_size_margin"
            android:layout_marginBottom="@dimen/normal_size_margin"
            app:layout_constraintBottom_toTopOf="@+id/tv_text_two"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="16sp"/>

    <ImageView
            android:id="@+id/img_login"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_marginBottom="@dimen/normal_size_margin"
            android:contentDescription="@string/logo_full"
            app:srcCompat="@drawable/undraw_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_text_one"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_name"
            app:layout_constraintVertical_bias="0.9"/>

</androidx.constraintlayout.widget.ConstraintLayout>