<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/itemTopup"
        android:background="@drawable/item_selector_button">

    <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#FFDADADA"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/listFormattedDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listFormattedID"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:text="@string/formatterdId" android:textSize="13sp"/>

    <TextView
            android:text="@string/formattedStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listFormattedStatus"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingEnd="9dp"
            android:paddingStart="9dp" android:textSize="13sp"/>

    <TextView
            android:text="@string/idrp_20_000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listFormattedAmount"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/listFormattedStatus"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="13sp"/>

    <TextView
            android:text="@string/farmatteedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listType"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/listFormattedID" android:textSize="13sp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listFormattedDate"
            android:text="@string/formattedEx"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/listType" android:textSize="13sp"/>

</android.support.constraint.ConstraintLayout>