<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="3dp"
        app:cardCornerRadius="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cart_round"
            android:padding="@dimen/big_size_margin">

        <TextView
                android:id="@+id/tv_total_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_product"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/tv_service"
                android:text="@string/service_fees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_size_margin"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@+id/tv_total_product"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/tv_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_size_margin"
                android:text="@string/total"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@+id/tv_service"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
                android:id="@+id/order_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rp_0"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/service_fees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rp_0"
                android:layout_marginTop="@dimen/normal_size_margin"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/order_price"/>

        <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_size_margin"
                android:text="@string/rp_0"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/service_fees"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>